[metadata]
name = libembroidery
version = 1.0.0-alpha
author = The Embroidermodder Team
author_email = embroidermodder@gmail.com
description = A basic library for creating and altering machine embroidery files with Python.
long_description = file: README.md, LICENSE, dev_notes.md
long_description_content_type = text/markdown
license = Zlib/libpng License
url = https://embroidermodder.org
project_urls = 
    Source = https://github.com/embroidermodder/libembroidery
    Bug Tracker = https://github.com/embroidermodder/libembroidery/issues
classifiers =
    Programing Language :: Python :: 3
    License :: OSI Approved :: zlib/libpng License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.7
