cmake_minimum_required(VERSION 3.5)

project(libembroidery VERSION 1.0.0 LANGUAGES C)

set(CMAKE_C_STANDARD 90)
set(CMAKE_C_STANDARD_REQUIRED True)

if (WIN32)
#add_compile_options(
#    -O2
#)
else (WIN32)
add_compile_options(
    -g
    -O2
    -fPIC
    -std=c99
    -Wall
    -Wextra
#    -Werror
)
endif (WIN32)

set(LIBRARY_SRC
	api-start.h
	api-stop.h
	compound-file.c
	compound-file-common.h
	compound-file-difat.c
	compound-file-difat.h
	compound-file-directory.c
	compound-file-directory.h
	compound-file-fat.c
	compound-file-fat.h
	compound-file.h
	compound-file-header.c
	compound-file-header.h
	emb-arc.c
	emb-arc.h
	emb-circle.c
	emb-circle.h
	emb-color.c
	emb-color.h
	emb-compress.c
	emb-compress.h
	emb-ellipse.c
	emb-ellipse.h
	emb-file.c
	emb-file.h
	emb-flag.c
	emb-flag.h
	emb-format.c
	emb-format.h
	emb-hoop.c
	emb-hoop.h
	emb-layer.c
	emb-layer.h
	emb-line.c
	emb-line.h
	emb-logging.c
	emb-logging.h
#	emb-outline.c
#	emb-outline.h
	emb-path.c
	emb-path.h
	emb-pattern.c
	emb-pattern.h
	emb-point.c
	emb-point.h
	emb-polygon.c
	emb-polygon.h
	emb-polyline.c
	emb-polyline.h
	emb-reader-writer.c
	emb-reader-writer.h
	emb-rect.c
	emb-rect.h
	emb-satin-line.c
	emb-satin-line.h
	emb-settings.c
	emb-settings.h
	emb-spline.c
	emb-spline.h
	emb-stitch.c
	emb-stitch.h
	emb-thread.c
	emb-thread.h
	emb-time.c
	emb-time.h
	emb-vector.c
	emb-vector.h
	format-100.c
	format-100.h
	format-10o.c
	format-10o.h
	format-art.c
	format-art.h
	format-bmc.c
	format-bmc.h
	format-bro.c
	format-bro.h
	format-cnd.c
	format-cnd.h
	format-col.c
	format-col.h
	format-csd.c
	format-csd.h
	format-csv.c
	format-csv.h
	format-dat.c
	format-dat.h
	format-dem.c
	format-dem.h
	format-dsb.c
	format-dsb.h
	format-dst.c
	format-dst.h
	format-dsz.c
	format-dsz.h
	format-dxf.c
	format-dxf.h
	format-edr.c
	format-edr.h
	format-emd.c
	format-emd.h
	format-exp.c
	format-exp.h
	format-exy.c
	format-exy.h
	format-eys.c
	format-eys.h
	format-fxy.c
	format-fxy.h
	format-gc.c
	format-gc.h
	format-gnc.c
	format-gnc.h
	format-gt.c
	format-gt.h
	format-hus.c
	format-hus.h
	format-inb.c
	format-inb.h
	format-inf.c
	format-inf.h
	format-jef.c
	format-jef.h
	format-ksm.c
	format-ksm.h
	format-max.c
	format-max.h
	format-mit.c
	format-mit.h
	format-new.c
	format-new.h
	format-ofm.c
	format-ofm.h
	format-pcd.c
	format-pcd.h
	format-pcm.c
	format-pcm.h
	format-pcq.c
	format-pcq.h
	format-pcs.c
	format-pcs.h
	format-pec.c
	format-pec.h
	format-pel.c
	format-pel.h
	format-pem.c
	format-pem.h
	format-pes.c
	format-pes.h
	format-phb.c
	format-phb.h
	format-phc.c
	format-phc.h
	format-plt.c
	format-plt.h
	format-rgb.c
	format-rgb.h
	format-sew.c
	format-sew.h
	formats.h
	format-shv.c
	format-shv.h
	format-sst.c
	format-sst.h
	format-stx.c
	format-stx.h
	format-svg.c
	format-svg.h
	format-t01.c
	format-t01.h
	format-t09.c
	format-t09.h
	format-tap.c
	format-tap.h
	format-thr.c
	format-thr.h
	format-txt.c
	format-txt.h
	format-u00.c
	format-u00.h
	format-u01.c
	format-u01.h
	format-vip.c
	format-vip.h
	format-vp3.c
	format-vp3.h
	format-xxx.c
	format-xxx.h
	format-zsk.c
	format-zsk.h
	geom-arc.c
	geom-arc.h
	geom-circle.c
	geom-circle.h
	geom-line.c
	geom-line.h
	helpers-binary.c
	helpers-binary.h
	helpers-misc.c
	helpers-misc.h
	helpers-unused.h
	thread-color.c
	thread-color.h
)

add_library(embroidery_static STATIC ${LIBRARY_SRC})
